feat(full setup): three exchange connectors with full configuration of 3 crypto currency added